# ariaflow-web

./: .gitignore  .pre-commit-config.yaml  .prettierignore  ACTIONS.md  ARCHITECTURE.md  BACKEND_GAPS.md  BGS.md  CLAUDE.md  CONTRIBUTING.md  FRONTEND_GAPS.md  Makefile  README.md  RELEASE.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml  test.yml
docs/: FRESHNESS_AXIS.md  FRESHNESS_SNAPSHOT.md  HARDWARE_BOUND_IDENTITY.md  HEALTH_PILL_RULES.md  MULTI_BACKEND_AGGREGATED_VIEW.md  MULTI_DEVICE_AUTH_DESIGN.md  PLAN.md  POST_DOWNLOAD_LIFECYCLE.md  SCHEDULER_UI.md  SERVER_LIFECYCLE.md  UPDATE_PROCESSES.md  bgs-decision.yaml  ucc-declarations.yaml
docs/governance/: BGS.md  bgs-decision.yaml
docs/schemas/: README.md  api-aria2-get-global-option.schema.json  api-aria2-get-option.schema.json  api-aria2-option-tiers.schema.json  api-bandwidth-probe.schema.json  api-bandwidth.schema.json  api-declaration.schema.json  api-downloads-archive.schema.json  api-health.schema.json  api-lifecycle.schema.json  api-log.schema.json  api-peers.schema.json  api-scheduler.schema.json  api-sessions-stats.schema.json  api-sessions.schema.json  api-status.schema.json  api-torrents.schema.json  ucc-declarations.schema.json
e2e/: canonical-routes.spec.ts  ui-smoke.spec.ts
scripts/: build-html.mjs  check_bgs_drift.py  freshness-snapshot.mjs  gen_spec.py  homebrew_formula.py  publish.py  release.py
src/aria_queue/: cli.py  webapp.py
src/ariaflow_dashboard/: __init__.py  action_log.py  auto_update.py  bonjour.py  cli.py  install_self.py  webapp.py
src/ariaflow_dashboard/static/: app.js  formatters.js  index.html  sparkline.js  style.css
src/ariaflow_dashboard/static/_fragments/: header.html  tab_archive.html  tab_bandwidth.html  tab_dashboard.html  tab_dev.html  tab_lifecycle.html  tab_log.html  tab_options.html
src/ariaflow_dashboard/static/ts/: actions.test.ts  actions.ts  api.test.ts  api.ts  app.ts  backend.test.ts  backend.ts  file_selection.test.ts  file_selection.ts  filters.test.ts  filters.ts  formatters.test.ts  formatters.ts  freshness.test.ts  freshness.ts  lifecycle.test.ts  lifecycle.ts  main.ts  notifications.test.ts  notifications.ts  runtime.test.ts  runtime.ts  sparkline.test.ts  sparkline.ts  speed_history.test.ts  speed_history.ts  storage.test.ts  storage.ts
src/ariaflow_web/: __init__.py  bonjour.py  cli.py  client.py  webapp.py
src/ariaflow_web/static/: app.js  index.html  style.css
src/ariaflow_web/static/_fragments/: header.html  tab_dashboard.html  tab_dev.html  tab_log.html  tab_options.html
tests/: conftest.py  test_api_params.py  test_behavior.py  test_bgs_compliance.py  test_bgs_sha_drift.py  test_buttons.py  test_cli.py  test_coverage_check.py  test_download_lifecycle.py  test_frontend.py  test_homebrew_formula.py  test_quality.py  test_release.py  test_screenshots.py  test_static_serving.py  test_web.py
