[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariaflow-dashboard"
version = "0.1.597"
description = "Local dashboard frontend for ariaflow"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
local = ["ariaflow"]
dev = ["pytest", "pyyaml", "beautifulsoup4", "jsonschema", "ruff", "mypy"]
test-browser = ["pytest", "pyyaml", "beautifulsoup4", "jsonschema", "ruff", "mypy", "playwright"]

[project.scripts]
ariaflow-dashboard = "ariaflow_dashboard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Catch every file under static/ — top-level (style.css, index.html),
# all subdirs (vendor/, _fragments/, dist/), and any new dirs added
# later. The ** pattern + explicit fallbacks are belt-and-suspenders
# for setuptools versions that don't honour ** recursion alone.
ariaflow_dashboard = [
    "static/**/*",
    "static/*",
    "static/*.css",
    "static/*.html",
    "static/_fragments/*",
    "static/dist/*",
    "static/dist/*.js",
    "static/dist/*.html",
    "static/dist/*.map",
    "static/vendor/*",
    "static/vendor/**/*",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that require a browser (Playwright)",
]
